Feature: Added sprite data creation